[gd_scene load_steps=3 format=3 uid="uid://chmyx35lr5vk"]

[ext_resource type="Script" uid="uid://bjgynkuj2rgfv" path="res://ui/ground_inventory_ui.gd" id="1_qm84n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.4, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GroundInventoryUI" type="CanvasLayer"]
script = ExtResource("1_qm84n")

[node name="InventoryPanel" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -656.0
offset_top = -350.0
offset_right = -156.0
offset_bottom = 350.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "VEHICLE STORAGE (12x8)"
horizontal_alignment = 1

[node name="GridPanel" type="VBoxContainer" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="InventoryPanel/MarginContainer/VBoxContainer/GridPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 12

[node name="StatsPanel" type="HBoxContainer" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WeightLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer/StatsPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Weight: 0.0 / 60.0 kg"
horizontal_alignment = 1

[node name="CloseLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer/StatsPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Press ESC to close"
horizontal_alignment = 2
